--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,28 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+# Binaries (executables)
+main
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
 
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Go specific
 *.out
+*.test
+*.mod
+*.sum
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Dependency directories (vendor/)
+vendor/
 
-# Go workspace file
-go.work
-go.work.sum
+# Logs
+*.log
 
-# env file
+# OS specific
+.DS_Store
+Thumbs.db
+
+# IDE/Editor specific
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Sensitive files (if applicable, e.g. API keys)
 .env
